2004-08-18  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
	* gas/mips/branch-swap.s: New testcase.
	* gas/mips/branch-swap.d: New testcase.
	* gas/mips/mips.exp: Run the testcase.

2004-07-30  Michal Ludvig  <mludvig@suse.cz>

	* gas/i386/padlock.s, gas/i386/padlock.d: New tests for
	VIA PadLock instructions.

2004-05-11  Daniel Jacobowitz  <dan@debian.org>

	Revert patch for 2.15:
	2004-02-09  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
	* gas/sh/sh64/err-dsp.s: Fix expected error message.

2004-05-06  Daniel Jacobowitz  <dan@debian.org>

	Merge from mainline:
	2004-04-23  Nick Clifton  <nickc@redhat.com>
	* gas/symver/symver1.d: Cope with extra symbols inserted by
	arm-elf toolchains.
	* gas/symver/symver0.d: Likewise
	* gas/elf/symver.d: Likewise.

2004-05-05  Alexandre Oliva  <aoliva@redhat.com>

	* gas/frv/reloc1.d: Match elf32-frvfdpic as well.

2004-04-14  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/vr4122.[sd]: Change option to -mfix-vr4120.

2004-04-14  Richard Sandiford  <rsandifo@redhat.com>

	* gas/elf/section2.e-mips: Allow named section symbols.
	* gas/mips/{,el}empic.d, gas/mips/mips{,el}16-[ef].d: Likewise.

2004-04-09  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2004-04-01  Asgari Jinia  <asgarij@kpitcummins.com>
	* gas/sh/renesas-1.s, gas/sh/renesas-1.d: New test for -renesas
	option.
	* gas/sh/basic.exp: Run the new test.

	2004-04-01  Dave Korn  <dk@artimi.com>
	* gas/dlx/alltests.exp: Execute new lohi test.
	* gas/dlx/lohi.s: New test for spurious lo16/hi16
	reloc overflow checking.
	* gas/dlx/lohi.d: New file: expected output.
	* gas/dlx/lhi.d: Updated to properly expect lo16
	relocations where asked for.
	* gas/dlx/itype.d: Likewise.
	* gas/dlx/lhi.d: Corrected cut+paste error in test name.

	2004-03-23  Andreas Schwab  <schwab@suse.de>
	* gas/cfi/cfi-m68k.d: Adjust offsets.

	2004-03-08  Andreas Jaeger  <aj@suse.de>
	* gas/cfi/cfi-s390x-1.d: Adjust offsets.

	2004-03-07  Richard Henderson  <rth@redhat.com>